# pyffstream

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  codeql-analysis.yml  release.yml  tox.yml
docs/: conf.py  index.rst  reference.rst
src/: cli_entry.py
src/pyffstream/: __init__.py  __main__.py  cli.py  config.py  encode.py  ffmpeg.py
