[build-system]
requires = ["flit_core >=3.3,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyffstream"
readme = "README.md"
license = {file = "LICENSE"}
version = "0.0.4dev6"
authors = [{email = "pyffstream@gably.net"}]
dynamic = ["description"]
keywords = ["ffmpeg", "streaming", "srt", "rtmp"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Typing :: Typed",
  "Environment :: Console",
]
requires-python = ">=3.9"
dependencies = [
  "platformdirs >=2.1.0",
  "rich",
  "requests",
]

[project.urls]
Source = "https://github.com/GBeauregard/pyffstream"

[project.optional-dependencies]
dev = [
  "flit",
  "tox",
  "black",
  "isort",
  #"mypy",
  #"flake8",
]
docs = [
  "sphinx",
  "sphinx_autodoc_typehints",
  "sphinxcontrib-autoprogram",
]

[project.scripts]
pyffstream = "pyffstream.cli:main"

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "fixme",
  "missing-docstring",
  "logging-fstring-interpolation",
  "no-else-return",
  "no-else-break",
  "no-else-continue",
  "no-else-raise",
  "too-many-locals",
  "too-many-branches",
  "invalid-name",
  "global-statement",
  "too-few-public-methods",
  "too-many-statements",
  "too-many-arguments",
  "too-many-lines",
  "too-many-instance-attributes",
  "too-many-nested-blocks",
]

[tool.isort]
skip="venv"
profile="black"

[tool.black]
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
